HelloUltraviolet/Fixtures/RejectedSource/Expressions/ArrayIndexOutOfBounds/Expected.uv
//! Expected diagnostic metadata for the ArrayIndexOutOfBounds rejected-source specimen.

expectedDiagnostic("E-UNS-0103", "Index-Array-OOB-Err")
